--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,6 +2183,35 @@
    ],
    "source": [
     "np.hstack([a1,b1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7, 13, 14,  5],\n",
+       "       [18, 10, 17,  8],\n",
+       "       [11, 12, 19,  4],\n",
+       "       [16,  6,  1,  3]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### hstack & vstack\n",
+    "\n",
+    "arr1 = np.array([[7,13,14],[18,10,17],[11,12,19]])\n",
+    "arr2= np.array([16,6,1])\n",
+    "arr3= np.array([[5,8,4,3]])\n",
+    "\n",
+    "np.hstack((np.vstack((arr1,arr2)),np.transpose(arr3)))"
    ]
   },
   {
@@ -6989,7 +7018,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
